Make the "warning" more visible -- fixes #3

--- a/src/css/alert.css
+++ b/src/css/alert.css
@@ -1,6 +1,6 @@
 #note {
-    position: absolute;
-    z-index: 101;
+    position: fixed;
+    z-index: 100001; /* should be enough */
     top: 0;
     left: 0;
     right: 0;
